--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "babel-core": "^6.26.3",
     "bootstrap": "^5.1.1",
     "core-js": "^3.18.3",
+    "formik": "^2.2.9",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
