--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-core": "^6.26.3",
     "bootstrap": "^5.1.1",
     "core-js": "^3.18.3",
+    "dotenv": "^10.0.0",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
