--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "core-js": "^3.18.3",
     "dotenv": "^10.0.0",
     "history": "^5.0.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
