--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^5.0.1",
     "jsdoc": "^3.6.10",
     "path": "^0.12.7",
+    "push.js": "^1.0.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
